    so can be an expensive operation. Still, if the remote is a special
    remote, or a git repository that you cannot run fsck in locally, it's
    nice to have the ability to fsck it.
  * If you have any directory special remotes, now would be a good time to
    fsck them, in case you were hit by the data loss bug fixed in the
    previous release!

 -- Joey Hess <joeyh@debian.org>  Thu, 19 Jan 2012 15:12:03 -0400

git-annex (3.20120116) unstable; urgency=medium

  * Fix data loss bug in directory special remote, when moving a file
    to the remote failed, and partially transferred content was left
    behind in the directory, re-running the same move would think it
    succeeded and delete the local copy.

 -- Joey Hess <joeyh@debian.org>  Mon, 16 Jan 2012 16:43:45 -0400

git-annex (3.20120115) unstable; urgency=low

  * Add a sanity check for bad StatFS results. On architectures
    where StatFS does not currently work (s390, mips, powerpc, sparc),
    this disables the diskreserve checking code, and attempting to
    configure an annex.diskreserve will result in an error.
  * Fix QuickCheck dependency in cabal file.
  * Minor optimisations.

 -- Joey Hess <joeyh@debian.org>  Sun, 15 Jan 2012 13:54:20 -0400

git-annex (3.20120113) unstable; urgency=low

  * log: Add --gource mode, which generates output usable by gource.
  * map: Fix display of remote repos
  * Add annex-trustlevel configuration settings, which can be used to 
    override the trust level of a remote.
  * git-annex, git-union-merge: Support GIT_DIR and GIT_WORK_TREE.
  * Add libghc-testpack-dev to build depends on all arches.

 -- Joey Hess <joeyh@debian.org>  Fri, 13 Jan 2012 15:35:17 -0400

git-annex (3.20120106) unstable; urgency=low

  * Support unescaped repository urls, like git does.
  * log: New command that displays the location log for files,
    showing each repository they were added to and removed from.
  * Fix overbroad gpg --no-tty fix from last release.
